# mlb-airflow-data-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  league_name_choice.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  statsapi_analysis_script.py  statsapi_extraction_script.py  statsapi_info_extraction.ipynb  statsapi_notes.md  statsapi_parameters_script.py  statsapi_time_series_analysis.ipynb  statsapi_time_series_creation_analysis_script.py  statsapi_treatment_script.py
article_sections/: part1.md  part2.md  part3.md  part4.md  part5.md
bash/: statsapi_analysis_bash.sh  statsapi_analysis_bash.txt  statsapi_extraction_bash.sh  statsapi_extraction_bash.txt  statsapi_name_change_al_bash.sh  statsapi_name_change_al_bash.txt  statsapi_name_change_nl_bash.sh  statsapi_name_change_nl_bash.txt  statsapi_reporting_bash.sh  statsapi_reporting_bash.txt  statsapi_time_series_generation_bash.sh  statsapi_time_series_generation_bash.txt  statsapi_treatment_bash.sh  statsapi_treatment_bash.txt
dags/: statsapi_orchestration_al_dag.py  statsapi_orchestration_nl_dag.py  statsapi_reporting_al_dag.py  statsapi_reporting_nl_dag.py
data/: 2022-10-03_american_league_inactive_players.json  2022-10-04_national_league_inactive_players.json  2022-10-05_american_league_inactive_players.json  2022-10-05_national_league_inactive_players.json  2022-10-06_american_league_inactive_players.json  2022-10-06_national_league_inactive_players.json  2022-10-10_american_league_inactive_players.json  2022-10-10_national_league_inactive_players.json  2022-10-11_american_league_inactive_players.json  (+213 more)
(+41 files in other folders)
