[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-airflow-data-pipeline"
version = "0.0.1"
requires-python = "==3.12.11"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pydantic==2.12.4",
    "pytest==9.0.0",
    "MLB-StatsAPI==1.9.0",
    "apache-airflow==3.1.0",
    "structlog>=23.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlb_airflow_data_pipeline*"]
