[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-airflow-data-pipeline"
version = "0.0.1"
requires-python = "==3.12.11"
dependencies = [
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "pandas==3.0.3",
    "pydantic==2.12.5",
    "pytest==9.0.3",
    "MLB-StatsAPI==1.9.0",
    "apache-airflow==3.2.1",
    "structlog>=25.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlb_airflow_data_pipeline*"]
