[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-airflow-data-pipeline"
version = "0.0.1"
requires-python = "==3.12.11"
dependencies = [
    "matplotlib==3.11.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pydantic==2.13.4",
    "pytest==9.0.3",
    "MLB-StatsAPI==1.9.0",
    "apache-airflow==3.2.2",
    "structlog>=26.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlb_airflow_data_pipeline*"]
